# patchbin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  argparse.c  argparse.h  dirreader.c  dirreader.h  main.c  operation.c  operation.h  patchbin.kdev4
